--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="React Redux Dashboard App"
-    />
+    <meta name="description" content="React Redux Dashboard App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dashboard App</title>
+    <title>Job listings master</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
